fix: adjust legend styles for improved visibility and layout

--- a/src/styles/shelf.module.css
+++ b/src/styles/shelf.module.css
@@ -45,11 +45,13 @@
     text-shadow: 1px 1px 10px #000000;
     font-weight: bold;
     background: linear-gradient(to top, #3a3b3d00 20%, #3a3b3d99 40%, #3a3b3d99 50%, #3a3b3d00 75%);
+    backdrop-filter: blur(1px);
     border-radius: 10px;
     text-align: left;
-    overflow: hidden;
+    overflow: visible;
     white-space: nowrap;
-    padding: 2px 5px;
+    border-radius: 10px;
+    padding: 0;
 }
 
 .shelfSpan1 {
